fixed some bugs

--- a/partials/nav.hbs
+++ b/partials/nav.hbs
@@ -9,8 +9,8 @@
             </div>
         </a>
         <div class="hidden md:flex grid gap-x-10">
-            <a href="#" class="headerLink hover:underline ">Home</a>
-            <a href="#" class="headerLink hover:underline ">About</a>
+            <a href="/" class="headerLink hover:underline ">Home</a>
+            <a href="about" class="headerLink hover:underline ">About</a>
             <a href="#" class="headerLink hover:underline ">Locations</a>
             <a href="#" class="headerLink hover:underline ">Blog</a>
         </div>
