--- a/partials/staticmap.hbs
+++ b/partials/staticmap.hbs
@@ -4,11 +4,5 @@
     alt="Static Google map for {{name}} - {{neighborhood}}"
     width="300"
     height="200"
-    src="https://maps.googleapis.com/maps/api/staticmap?size=600x400&maptype=roadmap
-       &markers=color:red%7C
-      {{geocodedCoordinate.latitude}}
-       ,
-      {{geocodedCoordinate.longitude}}
-       &key={{_repo.googleApiKey}}&zoom=15"
-  />
+    src="https://maps.googleapis.com/maps/api/staticmap?size=600x400&maptype=roadmap&markers=color:red%7C{{geocodedCoordinate.latitude}},{{geocodedCoordinate.longitude}}&key={{_repo.googleApiKey}}&zoom=15" />
 </div>
