changed Google Maps api key to correct mapping. Changed to live api to sandbox live api hostname

--- a/partials/staticmap.hbs
+++ b/partials/staticmap.hbs
@@ -4,5 +4,6 @@
     alt="Static Google map for {{name}} - {{neighborhood}}"
     width="300"
     height="200"
-    src="https://maps.googleapis.com/maps/api/staticmap?size=600x400&maptype=roadmap&markers=color:red%7C{{geocodedCoordinate.latitude}},{{geocodedCoordinate.longitude}}&key={{_repo.googleApiKey}}&zoom=15" />
+    src="https://maps.googleapis.com/maps/api/staticmap?center={{geocodedCoordinate.latitude}},{{geocodedCoordinate.longitude}}&zoom=13&size=300x200&maptype=roadmap&markers=color:red%7Clabel:A%7C{{geocodedCoordinate.latitude}},{{geocodedCoordinate.longitude}}&key={{global.googleApiKey}}"
+      />
 </div>
